--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "typescript": "tsc --noEmit",
     "lint": "eslint \"**/*.{js,ts,tsx}\"",
     "prepare": "bob build",
-    "release": "release-it",
+    "release-patch": "release-it -- patch",
+    "release-minor": "release-it -- minor",
+    "release-major": "release-it -- major",
     "example": "yarn --cwd example",
     "pods": "cd example && pod-install --quiet",
     "bootstrap": "yarn example && yarn && yarn pods"
