--- a/renovate.json
+++ b/renovate.json
@@ -1,6 +1,16 @@
 {
+  "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
-    "config:base"
+    "config:recommended",
+    "regexManagers:biomeVersions",
+    ":pinAllExceptPeerDependencies"
+  ],
+  "labels": [
+    "renovate"
+  ],
+  "timezone": "Asia/Tokyo",
+  "schedule": [
+    "before 9am on Monday"
   ],
   "packageRules": [
     {
@@ -16,10 +26,6 @@
       ]
     }
   ],
-  "labels": [
-    "dependencies"
-  ],
-  "schedule": "every weekend",
   "ignoreDeps": [
     "react-native",
     "react",
