--- a/example/package.json
+++ b/example/package.json
@@ -26,5 +26,9 @@
     "babel-plugin-module-resolver": "5.0.0",
     "babel-preset-expo": "11.0.5",
     "expo-cli": "6.3.10"
+  },
+  "volta": {
+    "node": "20.10.0",
+    "yarn": "1.22.1"
   }
 }
