--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "scripts": {
     "test": "jest",
     "typescript": "tsc --noEmit",
-    "lint": "eslint \"**/*.{js,ts,tsx}\"",
+    "check": "biome check .",
     "prepare": "bob build",
     "release-patch": "release-it -- patch",
     "release-minor": "release-it -- minor",
@@ -33,11 +33,7 @@
     "pods": "cd example && pod-install --quiet",
     "bootstrap": "yarn example && yarn && yarn pods"
   },
-  "keywords": [
-    "react-native",
-    "ios",
-    "android"
-  ],
+  "keywords": ["react-native", "ios", "android"],
   "repository": "https://github.com/gemcook/react-native-animated-scroll-view",
   "author": "Gemcook Engineers <engineers@gemcook.com>",
   "license": "MIT",
@@ -50,21 +46,13 @@
     "access": "public"
   },
   "devDependencies": {
+    "@biomejs/biome": "1.7.3",
     "@commitlint/config-conventional": "19.2.2",
-    "@react-native-community/eslint-config": "3.2.0",
     "@release-it/conventional-changelog": "8.0.1",
     "@types/jest": "29.5.11",
     "@types/react": "18.0.17",
     "@types/react-native": "0.72.8",
-    "@typescript-eslint/eslint-plugin": "7.8.0",
-    "@typescript-eslint/parser": "7.8.0",
     "commitlint": "19.3.0",
-    "eslint": "8.56.0",
-    "eslint-config-prettier": "9.1.0",
-    "eslint-plugin-prettier": "5.1.2",
-    "eslint-plugin-react": "7.33.2",
-    "eslint-plugin-react-hooks": "4.6.0",
-    "eslint-plugin-react-native": "4.1.0",
     "husky": "4.3.8",
     "jest": "29.7.0",
     "metro-react-native-babel-preset": "0.77.0",
@@ -90,13 +78,11 @@
   "husky": {
     "hooks": {
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
-      "pre-commit": "yarn lint && yarn typescript"
+      "pre-commit": "yarn run check && yarn typescript"
     }
   },
   "commitlint": {
-    "extends": [
-      "@commitlint/config-conventional"
-    ]
+    "extends": ["@commitlint/config-conventional"]
   },
   "release-it": {
     "git": {
@@ -132,6 +118,6 @@
   "dependencies": {},
   "volta": {
     "node": "20.10.0",
-    "yarn": "1.22.21"
+    "yarn": "1.22.1"
   }
 }
